Add primary functionality

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,10 @@
 bot {
   port = 8080
   telegram-host = "api.telegram.org"
-  token = "bot_token"
+  token = "1171359102:AAHEYIUgDXop_f2bdMhnBZF-fP830M6bWO0"
   da = "CAACAgIAAxkBAAMIXrsfZdGljRjZyivN5VmCASu5BPoAAg4GAAI-iBoLuR1nMAd00FYZBA"
   net = "CAACAgIAAxkBAAMOXrshjyEUVdwdY-d3l-ijmIYVMJoAAg8GAAI-iBoLg9Ku2Tgwu_UZBA"
+
   stickers = [
     "CAACAgIAAxkBAAKQRl67IvwvcjGPIg6m2_TtNl6tl-9RAAIvAANMW9YJ39L_rtwdUWoZBA",
     "CAACAgIAAxkBAAKQzl67KqVVP2pEI-NSlsV_V8hejApoAAIQBgACPogaC-ZcJZec5gJaGQQ",
@@ -23,5 +24,7 @@ bot {
     "CAACAgIAAxkBAAKREF67LJh0Dz5-6szVLvCd2ufoHOHmAAJJCwACTFvWCX_1wXGWyZiUGQQ",
     "CAACAgIAAxkBAAKRFl67LNVZEcz1D_0-ZeQJprHbt02BAAJDAANMW9YJo3hIaaCjacEZBA"
   ]
+
   welcome-gif = "CgACAgIAAxkBAAMuXrs9hI37up4AAUoL9OUy-Wdp194UAAIDBAACiRcpSA2gaf6jKuMfGQQ"
+  download-dir = "exports/music"
 }
