--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 bot {
   port = 8080
   telegram-host = "api.telegram.org"
-  token = "1171359102:AAHEYIUgDXop_f2bdMhnBZF-fP830M6bWO0"
+  token = "bot-token"
   da = "CAACAgIAAxkBAAMIXrsfZdGljRjZyivN5VmCASu5BPoAAg4GAAI-iBoLuR1nMAd00FYZBA"
   net = "CAACAgIAAxkBAAMOXrshjyEUVdwdY-d3l-ijmIYVMJoAAg8GAAI-iBoLg9Ku2Tgwu_UZBA"
 
